# tariml

./: README.md  coverage.lcov  jest-junit.xml  pyproject.toml
.github/workflows/: build.yml
docs/: conf.py  ejemplo.rst  index.rst  instalacion.rst
tariml/: preprocesado.py
tests/: test_preprocesado.py
