[tool.poetry]
name = "tariml"
version = "0.1.2"
description = ""
authors = ["CristianTacoronteRivero <cristiantr.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
Sphinx = "^5.2.3"
pytest = "^7.1.3"
sphinx-autoapi = "^2.0.0"
black = "^22.10.0"
pylint = "^2.15.4"
pre-commit = "^2.20.0"
mypy = "^0.982"
pytest-cov = "^4.0.0"
modeltools = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"